upload the project

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# Data folders
+data/
+
+# Used Libraries
+dkjson.lua
+
+# Exported Results
+manga.pdf
+result.txt
+
 # Compiled Lua sources
 luac.out
 
